Sun May 20 01:31:57 2001  George Lebl <jirka@5z.com>

	* menu.c: include math.h before gnome.h, patch from
	  mcnichol@austin.ibm.com (Dan McNichol) to make it compile on
	  some IBM compiler thingie

Sun May 20 00:26:47 2001  George Lebl <jirka@5z.com>

	* applet.c, menu.[ch], foobar-widget.c, scroll-menu.c:  Display menus
	  on their respective screens

	* basep-widget.c, xstuff.c: Fix border recalculation and the root
	  property setting

	* sliding-widget.c: Fix moving on offset screens

	* panel-util.c: when finding things in path, use access with X_OK
	  rather then the exists function which uses F_OK

Sat May 19 18:49:00 2001  George Lebl <jirka@5z.com>

	* multiscreen-stuff.c: fix dranbamage from cut and paste

Sat May 19 16:56:43 2001  George Lebl <jirka@5z.com>

	* aligned-widget.c, foobar-widget.c, basep-widget.[ch], session.c,
	  xstuff.[ch], edge-widget.c, multiscreen-stuff.c:  do the screen
	  border calculation and finally add the xinerama code, and
	  other final multiscreen touches.  So by default now xinerama dudes
	  get a multiscreen setup.

Sat May 19 02:17:18 2001  George Lebl <jirka@5z.com>

	* menu.c: create panels on the proper screen

	* session.c: sanitize screen

	* multiscreen-stuff.c: When we get an out of range screen number,
	  give offscreen values.  Also use an env var to setup the fake
	  xinerama setup for eaze of debugging.

	* foobar-widget.c: redo the multiscreenazition to be more tolerant
	  of errors, and work with things on non existent screens.

	* panel_config.[ch]: Add the widgetry for screen number and add the
	  avoid maximize to all proper panels

Fri May 18 02:44:47 2001  George Lebl <jirka@5z.com>

	* aligned-widget.[ch], basep-widget.[ch], border-widget.[ch],
	  drawer-widget.c, edge-widget.[ch], floating-widget.[ch],
	  foobar-widget.[ch], menu.c, multiscreen-stuff.[ch],
	  panel_config.[ch], session.c, sliding-widget.[ch]: Add the 
	  screen parameter to the change params and new functions, and load