@@ -1,3 +1,8 @@
+Tue May 22 01:15:26 2001  George Lebl <jirka@5z.com>
+
+	* gnome-run.c, menu.c, panel_config.c: multiscreen polishing and
+	  fixes
+
 Sun May 20 01:31:57 2001  George Lebl <jirka@5z.com>
 
 	* menu.c: include math.h before gnome.h, patch from
